examples/test/testpolicy13097.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13097
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key6: value20
      key3: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value37
      podSelector:
        matchLabels:
          key24: value21
          key35: value45
